# kerka-bot

./: README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml
src/alembic/migrations/: env.py
src/alembic/migrations/versions/: adf84aefcd7d_added_tables.py
src/kerka_bot/: create_bot.py  database.py  models.py  qiwi.py  settings.py  telebot.py
src/kerka_bot/handlers/: admin.py  client.py
src/kerka_bot/keyboards/: admin_kb.py
tests/: test_kerka_bot.py
