[tool.poetry]
name = "kerka-bot"
version = "0.1.0"
description = ""
authors = ["suband74 <suband@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.21"
python-dotenv = "^0.20.0"
pyQiwiP2P = "^2.0.6"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
